Fixed content overlapping with nav bar on individual products

--- a/themes/inhabitant/sass/_page-templates.scss
+++ b/themes/inhabitant/sass/_page-templates.scss
@@ -280,22 +280,22 @@
       background: #808080;
       border: none;
     }
-  svg {
-    margin-right: 5px;
-    width: 20px;
-    height: 20px;
+    svg {
+      margin-right: 5px;
+      width: 20px;
+      height: 20px;
+    }
   }
-}
-
-.price-text {
-  font-size: 2.5rem;
-}
-
-.entry-title {
-  color: #d99054;
-  text-transform: uppercase;
-}
-
+  .site-content {
+    padding-top: 50px;
+  }
+  .price-text {
+    font-size: 2.5rem;
+  }
+  .entry-title {
+    color: #d99054;
+    text-transform: uppercase;
+  }
 }
 
 /* Find Us Page */
