--- a/themes/inhabitant/style.css
+++ b/themes/inhabitant/style.css
@@ -1203,6 +1203,8 @@ object {
       margin-right: 5px;
       width: 20px;
       height: 20px; }
+  .single-product .site-content {
+    padding-top: 50px; }
   .single-product .price-text {
     font-size: 2.5rem; }
   .single-product .entry-title {
